# TelegramQRBot

./: CMakeLists.txt
src/: Config.h  Main.cpp
src/Bot/: BotHandler.cpp  BotHandler.h
src/Utils/: Utils.h
src/Valdiator/: valdiator.cpp  valdiator.h
